# transmission_scripts

./: .gitignore  README.md  cli.py  noxfile.py  pyproject.toml  ruff.toml
applications/cli/: pyproject.toml
applications/cli/src/project_cli/: __init__.py  main.py
applications/cli/src/project_cli/subcommands/: __init__.py  _transmission.py
applications/cli/src/project_cli/subcommands/transmission/: __init__.py  _transmission.py  methods.py
applications/tui/: pyproject.toml
applications/tui/src/transmission_tui/: __init__.py  main.py
configs/: example.config.json
containers/dockerfiles/: Dockerfile
libs/coreutils-lib/: pyproject.toml
libs/coreutils-lib/src/core_utils/df_utils/: __init__.py
libs/coreutils-lib/src/core_utils/df_utils/convert/: __init__.py  _converters.py
libs/coreutils-lib/src/core_utils/df_utils/io/: load.py  save.py
libs/coreutils-lib/src/core_utils/df_utils/pd_config/: display.py
libs/coreutils-lib/src/core_utils/df_utils/utils/: _utils.py
libs/coreutils-lib/src/core_utils/df_utils/validators/: __init__.py  type_validators.py
libs/coreutils-lib/src/core_utils/hash_utils/: methods.py
libs/coreutils-lib/src/core_utils/path_utils/: methods.py
libs/coreutils-lib/src/core_utils/spinner_utils/: __init__.py  spinners.py
libs/coreutils-lib/src/core_utils/time_utils/: __init__.py  constants.py  methods.py
libs/coreutils-lib/src/core_utils/uuid_utils/: __init__.py  classes.py  constants.py  operations.py  validators.py
libs/setup-lib/: pyproject.toml
libs/setup-lib/src/setup/: __setup_logging.py
libs/transmission-lib/: pyproject.toml
libs/transmission-lib/src/transmission_lib/: __init__.py  constants.py  controllers.py  methods.py  settings.py
sandbox/config_sandbox/: config_sandbox.py
sandbox/transmission/: test_connection.py
sandbox/tui/: filmgr.py  helloworld.py  textual_tutorial.py  torrentmgr.py  tui_test1.py
scripts/: prune_git_branches.ps1
scripts/docker/: build_container.ps1  build_container.sh
scripts/docker/run_scripts/: run_count_finished_torrents.sh  run_count_torrents.sh  run_rm_finished_torrents.sh
scripts/transmission/: count_all_torrents.py
scripts/transmission/count/: count_all_torrents.py  count_finished_torrents.py
scripts/transmission/delete/: delete_finished_torrents.py
scripts/transmission/list/: list_downloading_torrents.py  list_finished_torrents.py
