[project]
name = "tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "redjax", email = "no@none.com" }]
requires-python = ">=3.12"
dependencies = [
    "textual>=2.1.2",
    "transmission-rpc>=7.0.11",
]

[project.scripts]
tui = "tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/transmission_tui"]
