[project]
name = "coreutils-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "no@none.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2024.11.0",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
]

[project.scripts]
coreutils-lib = "coreutils_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core_utils"]
