[project]
name = "setup-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "redjax", email = "no@none.com" }]
requires-python = ">=3.11"
dependencies = ["loguru>=0.7.3"]

[project.scripts]
setup-lib = "setup_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/setup"]

[tool.uv.sources]
database-lib = { workspace = true }
